--- a/web/index.html
+++ b/web/index.html
@@ -32,14 +32,7 @@
                             <br/>
                         </div>
                         <div class="container2">
-                            <span id="leaderboard-container" style="display:none">
-                                <h2 style="margin-bottom: -10px">Leaderboard</h2>
-                                <ol id="leaderboard" style="margin-bottom: 5px"></ol>
-                                <small><i>Info on submissions to leaderboard <a href="https://docs.google.com/document/d/1S0kBFau4GAAD6-yMFk0x6On0zqmR7v5qH28jSv20qq8/edit?usp=sharing" target="_blank">here</a></i></small>
-                                <hr style="margin-top: 5px"/>
-                                <script>const existingCookie=document.cookie.replace(/(?:(?:^|.*;\s*)rowData\s*\=\s*([^;]*).*$)|^.*$/,"$1");if(existingCookie){let e=JSON.parse(existingCookie);e.forEach(e=>{let i=document.createElement("li");i.innerHTML=e,document.getElementById("leaderboard").appendChild(i)}),document.getElementById("leaderboard-container").style.display="block"}</script>
-                            </span>
-                            <h2 style="margin-top: -10px; margin-bottom: -10px">Rules</h2>
+                            <h2 style="margin-bottom: -10px">Rules</h2>
                             <ul>
                                 <li>The Computer Will Generate a Predetermined Route</li>
                                 <li>You Create Your Own Route With Same Driving Time</li>
